src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For check, Allow for Attachments</description>
        <inlineHelpText>For check, Allow for Attachments</inlineHelpText>
        <label>Allow_Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admin allows to user add a comment on the question.</description>
        <label>Allow Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admin can define whether its number or a currency, in case of currency, user should be able to choose the currency symbol.</description>
        <label>Allow Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decimal_value__c</fullName>
        <label>Decimal value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <description>admin set Default Value for slider input</description>
        <label>Default Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Help_Text_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow admin to enter help text of question when checkbox checked.</description>
        <label>Help Text Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <description>Question Help Text</description>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Allow_Branching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admin can set question branches</description>
        <label>Is Allow Branching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Approve_For_Library__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the question is approve or not for the library.</description>
        <inlineHelpText>Check the question is approve or not for the library.</inlineHelpText>
        <label>Is Approve For Library</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Score_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show and hide score text field.</description>
        <inlineHelpText>Show and hide score text field.</inlineHelpText>
        <label>Is Score Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Weight_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show and hide weight text field.</description>
        <inlineHelpText>Show and hide weight text field.</inlineHelpText>
        <label>Is Weight Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Question label</description>
        <label>Label</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Char_Length__c</fullName>
        <description>Admin can specify the max char length of the text associated with that question in a questionnaire.</description>
        <label>Max Char Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_value__c</fullName>
        <description>admin can set maximum value for slider</description>
        <label>Maximum value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metadata__c</fullName>
        <label>Metadata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Value__c</fullName>
        <label>Minimum Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Columns__c</fullName>
        <description>Define which question related to particular column number.</description>
        <label>No Of Columns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_To_Column__c</fullName>
        <description>Define which question is related to particular column.</description>
        <inlineHelpText>Define which question is related to particular column.</inlineHelpText>
        <label>Related To Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For check, question is required or not.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step_Size__c</fullName>
        <defaultValue>0</defaultValue>
        <description>admin set step size for slider input</description>
        <label>Step Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Set a Question Type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TextPlain</fullName>
                </value>
                <value>
                    <fullName>RichText</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>GPSLocate</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>MultiSelect</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Signature</fullName>
                </value>
                <value>
                    <fullName>Switch</fullName>
                </value>
                <value>
                    <fullName>Slider</fullName>
                </value>
                <value>
                    <fullName>GPS Location</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Define the weight of question.</description>
        <inlineHelpText>Define the weight of question.</inlineHelpText>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>background_Color__c</fullName>
        <description>Define the background color of information input .</description>
        <inlineHelpText>Define the background color of information input .</inlineHelpText>
        <label>background_Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when question deleted .</description>
        <inlineHelpText>Checked when question deleted .</inlineHelpText>
        <label>is Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lookup_Object_API_Name__c</fullName>
        <description>Keep the object api name related to question.</description>
        <inlineHelpText>Keep the object api name related to question.</inlineHelpText>
        <label>lookup Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lookup_Object_Field_Name__c</fullName>
        <description>Keep the object name related to question.</description>
        <inlineHelpText>Keep the object name related to question.</inlineHelpText>
        <label>lookup Object Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>